[package]
name = "deployer"
version = "0.0.1"
edition = "2021"
authors = ["Samir Djelal <ssdjelal@gmail.com>"]
readme = "README.md"
repository = "https://github.com/samirdjelal/deployer"
license = "MIT"
homepage = "https://github.com/samirdjelal/deployer"
documentation = "https://docs.rs/deployer"
keywords = ["laravel", "deployer", "deploy", "zero-downtime", "continuous-delivery"]
description = "Laravel Zero Downtime"
exclude = [
	"screenshot/*",
	"examples/*",
]

[lib]
name = "deployer"
path = "src/lib.rs"

[[bin]]
name = "deployer"
path = "src/main.rs"

[dependencies]
yaml-rust = "0.4.5"
ssh2 = "0.9"